--- a/scss/style/_variables.scss
+++ b/scss/style/_variables.scss
@@ -8,6 +8,7 @@ $z-index-controls: 5;
 $z-index-pacman: 6;
 $z-index-menu: 8;
 $z-index-logo: 10;
+$z-index-fullscreen-toggle: 15;
 
 //breakpoints
 $grid-breakpoints: (
